[gd_scene load_steps=4 format=3 uid="uid://plbbnale87i1"]

[ext_resource type="Script" path="res://Misc/gj_ant.gd" id="1_3khnr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ykmfv"]
radius = 7.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cevpy"]
size = Vector2(16, 16)

[node name="BasicAnt" type="CharacterBody2D"]
position = Vector2(154, 0)
collision_layer = 2
script = ExtResource("1_3khnr")
speed = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ykmfv")
metadata/_edit_lock_ = true

[node name="Polygon2D" type="Polygon2D" parent="."]
polygon = PackedVector2Array(0, -8, -8, 0, 0, 8, 8, 0)
metadata/_edit_lock_ = true

[node name="RightRaycast" type="RayCast2D" parent="."]
target_position = Vector2(8, 0)
metadata/_edit_lock_ = true

[node name="LeftRaycast" type="RayCast2D" parent="."]
target_position = Vector2(-8, 0)
metadata/_edit_lock_ = true

[node name="UpRaycast" type="RayCast2D" parent="."]
target_position = Vector2(0, -8)
metadata/_edit_lock_ = true

[node name="DownRaycast" type="RayCast2D" parent="."]
target_position = Vector2(0, 8)
metadata/_edit_lock_ = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_cevpy")
